Configure Error Prone for newer JDKs